--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>简历生成器</title>
+    <title>Neo Zhang's resume</title>
     <link rel="stylesheet" href="static/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.0/remodal-default-theme.min.css">
@@ -18,26 +18,26 @@
             <div class="me">
                 <div class="portrait"></div>
                 <div class="remodal remodal-img" data-remodal-id="portrait-modal">
-                    <h3>请输入图片URL地址：</h3>
+                    <h3>static/image/neozhang.png</h3>
                     <br/>
                     <input type="text" id="avatar-url">
                     <button data-remodal-action="confirm" class="remodal-confirm">确定</button>
                 </div>
-                <h1 id="username" >ekCit</h1>
-                <h4 id="persona-tag" >Python / Web / 互联网教育</h4>
+                <h1 id="username" >Neo Zhang</h1>
+                <h4 id="persona-tag" >Go / Web / 互联网 / 后端</h4>
             </div>
             <div class="profile info-unit">
                 <h2 class="info-header"><i class="iconfont icon-person"></i> <span class="info-title">基本信息</span></h2>
                 <hr>
                 <ul class="info-list">
                     <li>
-                        <label class="left-label">姓名</label><span class="label-value">XXX</span></li>
+                        <label class="left-label">姓名</label><span class="label-value">Neo Zhang</span></li>
                     <li>
                         <label class="left-label">学历</label><span class="label-value">本科</span></li>
                     <li>
-                        <label class="left-label">毕业院校</label><span class="label-value">北京邮电大学</span></li>
+                        <label class="left-label">毕业院校</label><span class="label-value">塔里木大学</span></li>
                     <li>
-                        <label class="left-label">毕业年份</label><span class="label-value">2017</span></li>
+                        <label class="left-label">毕业年份</label><span class="label-value">2018</span></li>
                 </ul>
             </div>
             <div class="contact info-unit">
@@ -45,13 +45,13 @@
                 <hr>
                 <ul class="info-list">
                     <li>
-                        <label class="left-label">手机</label><span class="label-value">182XXXXXXXX</span></li>
+                        <label class="left-label">手机</label><span class="label-value">XXXXXXXXXXX</span></li>
                     <li>
-                        <label class="left-label">邮箱</label><span class="label-value">crmrc2014@gmail.com</span></li>
+                        <label class="left-label">邮箱</label><span class="label-value">zoctopus@qq.com</span></li>
                     <li>
-                        <label class="left-label">个人主页</label><span class="label-value">exit-tixe.me</span></li>
+                        <label class="left-label">个人主页</label><span class="label-value">https://octopuslian.github.io/</span></li>
                     <li>
-                        <label class="left-label">Github</label><span class="label-value">github.com/ekCit</span></li>
+                        <label class="left-label">Github</label><span class="label-value">https://github.com/OctopusLian</span></li>
                 </ul>
             </div>
             <div class="skill info-unit">
@@ -59,20 +59,32 @@
                 <hr>
                 <ul class="progress-list">
                     <li>
-                        <label class="left-label">Python</label>
-                        <progress value="80" max="100"></progress>
-                    </li>
-                    <li>
-                        <label class="left-label">html/css</label>
+                        <label class="left-label">Golang</label>
                         <progress value="70" max="100"></progress>
                     </li>
                     <li>
-                        <label class="left-label">Javascript</label>
+                        <label class="left-label">数据库</label>
+                        <progress value="50" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="left-label">操作系统</label>
+                        <progress value="40" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="left-label">数据结构与算法</label>
+                        <progress value="40" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="left-label">设计模式</label>
+                        <progress value="45" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="left-label">项目经验</label>
                         <progress value="60" max="100"></progress>
                     </li>
                     <li>
-                        <label class="left-label">机器学习</label>
-                        <progress value="60" max="100"></progress>
+                        <label class="left-label">英语水平</label>
+                        <progress value="65" max="100"></progress>
                     </li>
                 </ul>
             </div>
@@ -81,13 +93,13 @@
                 <hr>
                 <ul class="stack-list">
                     <li>
-                        <label class="left-label">前端</label><span class="label-value">jQuery、Angular.js、React.js</span></li>
+                        <label class="left-label">前端</label><span class="label-value">js、HTML、CSS</span></li>
                     </li>
                     <li>
-                        <label class="left-label">后端</label><span class="label-value">Flask、Django、Twisted、Node.js、MongoDB、MySQL、Redis</span></li>
+                        <label class="left-label">后端</label><span class="label-value">Linux、Docker、MySQL、Redis</span></li>
                     </li>
                     <li>
-                        <label class="left-label">其它</label><span class="label-value">我全都是瞎写的。</span></li>
+                        <label class="left-label">其它</label><span class="label-value">Python、C</span></li>
                     </li>
                 </ul>
             </div>
@@ -96,7 +108,7 @@
                 <h2 class="info-header"><i class="iconfont icon-weixin"></i> <span class="info-title">个人微信</span></h2>
                 <hr>
                 <div class="weixin">
-                    <img src="static/image/weixin.png" alt="">
+                    <img src="static/image/nian-weixin.jpg" alt="">
 
                 </div>
             </div>
@@ -113,10 +125,7 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>北京邮电大学 - 网络工程专业（本科）2012-2017</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        </p>
+                        <h3>塔里木大学 - 计算机科学与技术专业（本科）2014-2018</h3>
                     </li>
                 </ul>
             </div>
@@ -125,44 +134,52 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>北京创客空间－实习生（实习）</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        <h3>飞鱼科技国际有限公司－游戏服务端开发工程师 (2018.6-2018.9)</h3>
+                        <p> 1.负责游戏服务器基础逻辑功能、脚本等工作
+                            2.游戏设定功能进行服务器端编码、测试及开发文档编写
                         </p>
                     </li>
                     <li>
-                        <h3>实验楼－课程内容（实习）</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        <h3>成都华栖云科技有限公司－研发工程师(2018.9-2020.11)</h3>
+                        <p> 1.负责视音频处理技术的相关研发工作，具体包括需求分析、文档撰写、设计编码、测试运维等工作
+                            2.负责视音频内容分析和智能处理相关技术的研发工作
+                            3.参与技术方案讨论，开发、优化、解决技术方案选型及工程实现
                         </p>
                     </li>
                 </ul class="experience-list">
             </div>
             <div class="project info-unit right-list">
-                <h2 class="info-header"><i class="iconfont icon-project"></i> <span class="info-title">个人项目</span></h2>
+                <h2 class="info-header"><i class="iconfont icon-project"></i> <span class="info-title">项目经历</span></h2>
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>基于 Qt 5 的文本编辑器</h3>
+                        <h3>Amie智能生产服务系统-研发工程师(2019.10-2020.11)</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            1.通过REST API接收前端发来的http请求
+                            2.使用FFmpeg裁剪出视频和音频片段
+                            3.使用FFmpeg滤波器解决视频分辨率不一致的问题
+                            4.采用Redis数据库进行与其他服务的通信
+                            5.使用Git版本控制工具托管代码
+                            6.通过Docker解决FFmpeg带转场特技渲染的环境配置问题，同时也优化了测试和运维的部署流程
+                            7.使用FFmpeg和OpenCV支持两种去抖动的方式
+                            8.使用FFmpeg完成海报贴图
+                            9.采用Golang中的协程和通道完成Amie中对音视频裁剪的并发工作
+                            项目成果：https://www.chinamcloud.com/zb/spnl/alzhmbyq/index.shtml
                             <br/>
                         </p>
                     </li>
                     <li>
-                        <h3>基于 Flask 的主机监视系统</h3>
+                        <h3>Iva流媒体智能收录系统-研发工程师(2018.11-2019.10)</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                        </p>
-                    </li>
-                    <li>
-                        <h3>基于 Live2D 与 clmtrackr 的山寨 Facerig</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                        </p>
-                    </li>
-                    <li>
-                        <h3>如果项目太少，可以在实验楼上找项目做啊:D</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            1.使用Work-Pool设计模式实现并发执行清理视频分片的任务
+                            2.通过FFprobe检测复合流中的PID号
+                            3.采用FFmpeg检测源流信息，包括源流是否正常，断流和静音，生成复合流PID视频片段
+                            4.使用MySQL数据库记录源流状态和源流数据
+                            5.通过hls流协议完成hls流下载模块
+                            6.采用Golang中的协程和通道完善Iva智能流媒体收录系统中的调度模块
+                            7.使用Git版本控制工具托管代码
+                            8.采用REST API接收前端和其它服务发来的http请求
+                            项目成果：https://www.chinamcloud.com/ymgc/hj/lmbsl/index.shtml
                         </p>
                     </li>
                 </ul>
@@ -172,29 +189,24 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>小学生作文二等奖</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。
-                        </p>
+                        <h3>飞鱼48小时游戏开发大赛优秀奖-2018.7</h3>
                     </li> 
                     <li>
-                        <h3>曾获统一冰红茶“再来一瓶”奖</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。
-                        </p>
+                        <h3>蓝桥杯C/C++程序设计本科B组自治区一等奖-2017.4</h3>
                     </li> 
                     <li>
-                        <h3>这一行也是为了凑版面</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。
-                        </p>
-                    </li>                     
+                        <h3>全国大学生数学建模竞赛自治区三等奖-2016.12</h3>
+                    </li>
+                    <li>
+                        <h3>蓝桥杯C/C++程序设计本科B组自治区二等奖-2016.4</h3>
+                    </li> 
             </div>
             <div class="aboutme info-unit right-paragraph">
                 <h2 class="info-header"><i class="iconfont icon-flower"></i> <span class="info-title">自我评价</span></h2>
                 <hr>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    从事互联网研发行业，熟悉项目开发流程，掌握后端开发常用的技能；擅长分析技术难题并总结项目经验；善于团队协作，对新技术充满好奇并主动学习及掌握，
+                    在掌握后端技术的前提下，会开始逐渐往更底层和前端的领域学习，努力成为一名资深的研发工程师。
                 </p>
             </div>
         </div>
