add skill and update

--- a/index.html
+++ b/index.html
@@ -63,6 +63,18 @@
                         <progress value="70" max="100"></progress>
                     </li>
                     <li>
+                        <label class="left-label">C/C++</label>
+                        <progress value="30" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="left-label">Python</label>
+                        <progress value="40" max="100"></progress>
+                    </li>
+                    <li>
+                        <label class="left-label">Java</label>
+                        <progress value="20" max="100"></progress>
+                    </li>
+                    <li>
                         <label class="left-label">数据库</label>
                         <progress value="50" max="100"></progress>
                     </li>
@@ -135,14 +147,14 @@
                 <ul class="experience-list">
                     <li>
                         <h3>飞鱼科技国际有限公司－游戏服务端开发工程师 (2018.6-2018.9)</h3>
-                        <p> 1.负责游戏服务器基础逻辑功能、脚本等工作
+                        <p> 1.负责游戏服务器基础逻辑功能、脚本等工作  
                             2.游戏设定功能进行服务器端编码、测试及开发文档编写
                         </p>
                     </li>
                     <li>
                         <h3>成都华栖云科技有限公司－研发工程师(2018.9-2020.11)</h3>
-                        <p> 1.负责视音频处理技术的相关研发工作，具体包括需求分析、文档撰写、设计编码、测试运维等工作
-                            2.负责视音频内容分析和智能处理相关技术的研发工作
+                        <p> 1.负责视音频处理技术的相关研发工作，具体包括需求分析、文档撰写、设计编码、测试运维等工作  
+                            2.负责视音频内容分析和智能处理相关技术的研发工作  
                             3.参与技术方案讨论，开发、优化、解决技术方案选型及工程实现
                         </p>
                     </li>
@@ -155,15 +167,15 @@
                     <li>
                         <h3>Amie智能生产服务系统-研发工程师(2019.10-2020.11)</h3>
                         <p>
-                            1.通过REST API接收前端发来的http请求
-                            2.使用FFmpeg裁剪出视频和音频片段
-                            3.使用FFmpeg滤波器解决视频分辨率不一致的问题
-                            4.采用Redis数据库进行与其他服务的通信
-                            5.使用Git版本控制工具托管代码
-                            6.通过Docker解决FFmpeg带转场特技渲染的环境配置问题，同时也优化了测试和运维的部署流程
-                            7.使用FFmpeg和OpenCV支持两种去抖动的方式
-                            8.使用FFmpeg完成海报贴图
-                            9.采用Golang中的协程和通道完成Amie中对音视频裁剪的并发工作
+                            1.通过REST API接收前端发来的http请求  
+                            2.使用FFmpeg裁剪出视频和音频片段  
+                            3.使用FFmpeg滤波器解决视频分辨率不一致的问题  
+                            4.采用Redis数据库进行与其他服务的通信  
+                            5.使用Git版本控制工具托管代码  
+                            6.通过Docker解决FFmpeg带转场特技渲染的环境配置问题，同时也优化了测试和运维的部署流程  
+                            7.使用FFmpeg和OpenCV支持两种去抖动的方式  
+                            8.使用FFmpeg完成海报贴图  
+                            9.采用Golang中的协程和通道完成Amie中对音视频裁剪的并发工作  
                             项目成果：https://www.chinamcloud.com/zb/spnl/alzhmbyq/index.shtml
                             <br/>
                         </p>
@@ -171,14 +183,14 @@
                     <li>
                         <h3>Iva流媒体智能收录系统-研发工程师(2018.11-2019.10)</h3>
                         <p>
-                            1.使用Work-Pool设计模式实现并发执行清理视频分片的任务
-                            2.通过FFprobe检测复合流中的PID号
-                            3.采用FFmpeg检测源流信息，包括源流是否正常，断流和静音，生成复合流PID视频片段
-                            4.使用MySQL数据库记录源流状态和源流数据
-                            5.通过hls流协议完成hls流下载模块
-                            6.采用Golang中的协程和通道完善Iva智能流媒体收录系统中的调度模块
-                            7.使用Git版本控制工具托管代码
-                            8.采用REST API接收前端和其它服务发来的http请求
+                            1.使用Work-Pool设计模式实现并发执行清理视频分片的任务  
+                            2.通过FFprobe检测复合流中的PID号  
+                            3.采用FFmpeg检测源流信息，包括源流是否正常，断流和静音，生成复合流PID视频片段  
+                            4.使用MySQL数据库记录源流状态和源流数据  
+                            5.通过hls流协议完成hls流下载模块  
+                            6.采用Golang中的协程和通道完善Iva智能流媒体收录系统中的调度模块  
+                            7.使用Git版本控制工具托管代码  
+                            8.采用REST API接收前端和其它服务发来的http请求  
                             项目成果：https://www.chinamcloud.com/ymgc/hj/lmbsl/index.shtml
                         </p>
                     </li>
