--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                     <li>
                         <label class="left-label">邮箱</label><span class="label-value">zoctopus@qq.com</span></li>
                     <li>
-                        <label class="left-label">个人主页</label><span class="label-value">https://octopuslian.github.io/</span></li>
+                        <label class="left-label">个人主页</label><span class="label-value">octopuslian.github.io/ + cnblogs.com/OctoptusLian/</span></li>
                     <li>
-                        <label class="left-label">Github</label><span class="label-value">https://github.com/OctopusLian</span></li>
+                        <label class="left-label">Github</label><span class="label-value">github.com/OctopusLian</span></li>
                 </ul>
             </div>
             <div class="skill info-unit">
@@ -137,7 +137,7 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3>塔里木大学 - 计算机科学与技术专业（本科）2014-2018</h3>
+                        <h3>塔里木大学 - 计算机科学与技术专业（本科）2014.9-2018.6</h3>
                     </li>
                 </ul>
             </div>
@@ -148,14 +148,14 @@
                     <li>
                         <h3>飞鱼科技国际有限公司－游戏服务端开发工程师 (2018.6-2018.9)</h3>
                         <p> 1.负责游戏服务器基础逻辑功能、脚本等工作  
-                            2.游戏设定功能进行服务器端编码、测试及开发文档编写
+                            2.游戏设定功能进行服务器端编码、测试及开发文档编写  
                         </p>
                     </li>
                     <li>
                         <h3>成都华栖云科技有限公司－研发工程师(2018.9-2020.11)</h3>
                         <p> 1.负责视音频处理技术的相关研发工作，具体包括需求分析、文档撰写、设计编码、测试运维等工作  
                             2.负责视音频内容分析和智能处理相关技术的研发工作  
-                            3.参与技术方案讨论，开发、优化、解决技术方案选型及工程实现
+                            3.参与技术方案讨论，开发、优化、解决技术方案选型及工程实现  
                         </p>
                     </li>
                 </ul class="experience-list">
@@ -187,6 +187,7 @@
                             2.通过FFprobe检测复合流中的PID号  
                             3.采用FFmpeg检测源流信息，包括源流是否正常，断流和静音，生成复合流PID视频片段  
                             4.使用MySQL数据库记录源流状态和源流数据  
+                            
                             5.通过hls流协议完成hls流下载模块  
                             6.采用Golang中的协程和通道完善Iva智能流媒体收录系统中的调度模块  
                             7.使用Git版本控制工具托管代码  
