--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="me">
                 <div class="portrait"></div>
                 <div class="remodal remodal-img" data-remodal-id="portrait-modal">
-                    <h3>static/image/neozhang.png</h3>
+                    <h3>请输入图片URL地址：</h3>
                     <br/>
                     <input type="text" id="avatar-url">
                     <button data-remodal-action="confirm" class="remodal-confirm">确定</button>
@@ -105,13 +105,13 @@
                 <hr>
                 <ul class="stack-list">
                     <li>
-                        <label class="left-label">前端</label><span class="label-value">js、HTML、CSS</span></li>
+                        <label class="left-label">前端</label><span class="label-value">JavaScript、HTML、CSS</span></li>
                     </li>
                     <li>
-                        <label class="left-label">后端</label><span class="label-value">Linux、Docker、MySQL、Redis</span></li>
+                        <label class="left-label">后端</label><span class="label-value">Linux、Docker、MySQL、Redis、Gin、gRPC、Protobuf、Nginx</span></li>
                     </li>
                     <li>
-                        <label class="left-label">其它</label><span class="label-value">Python、C</span></li>
+                        <label class="left-label">其它</label><span class="label-value">WebSocket</span></li>
                     </li>
                 </ul>
             </div>
@@ -187,7 +187,7 @@
                             2.通过FFprobe检测复合流中的PID号  
                             3.采用FFmpeg检测源流信息，包括源流是否正常，断流和静音，生成复合流PID视频片段  
                             4.使用MySQL数据库记录源流状态和源流数据  
-                            
+
                             5.通过hls流协议完成hls流下载模块  
                             6.采用Golang中的协程和通道完善Iva智能流媒体收录系统中的调度模块  
                             7.使用Git版本控制工具托管代码  
